@@ -1,0 +1,17 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x128
+  RenderBlock {HTML} at (0,0) size 800x128
+    RenderBody {BODY} at (8,8) size 784x112
+      RenderBlock {DIV} at (0,0) size 784x56 [border: (2px solid #FF0000)]
+        RenderInline {SPAN} at (0,0) size 381x28
+          RenderText {TEXT} at (14,14) size 381x28
+            text run at (14,14) width 381: "We hold these truths to be self-evident,"
+        RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,56) size 784x56 [border: (2px solid #FF0000)]
+        RenderText {TEXT} at (14,14) size 318x28
+          text run at (14,14) width 318: "that all men are created equal, ..."
+selection is CARET:
+start:      position 40 of child 1 {TEXT} of child 1 {SPAN} of root {DIV}
+upstream:   position 40 of child 1 {TEXT} of child 1 {SPAN} of root {DIV}
+downstream: position 1 of child 2 {TEXT} of root {DIV}
