@@ -1,0 +1,41 @@
+<html> 
+<head>
+
+<style>
+.editing { 
+    border: 2px solid red; 
+    padding: 12px; 
+    font-size: 24px; 
+}
+</style>
+<script src=../editing.js language="JavaScript" type="text/JavaScript" ></script>
+
+<script>
+
+function editingTest() {
+    for (i = 0; i < 50; i++) {
+        moveSelectionForwardByCharacterCommand();
+    }
+}
+
+</script>
+
+<title>Editing Test</title> 
+</head> 
+<body id="root" contenteditable>
+<!-- body is contenteditable. treat these two divs like 
+     different paragraphs in the same widget. arrowing from
+     one to the other is OK. -->
+<div class="editing">
+<span id="test">We hold these truths to be self-evident,</span>
+</div>
+<div class="editing">
+that all men are created equal, ...
+</div>
+
+<script>
+runEditingTest();
+</script>
+
+</body>
+</html>
